# virtual_trial_emulator

./: .gitignore  AGENT.md  AGENTS.md  README.md  Report.md  config.yaml  config_310.yaml  data_real_patients.csv  dataframe_real_patients.csv  final_report.md  final_report_old.md  final_report_restored.md  pyproject.toml  requirements.txt
AllProvidedFiles_149/: PCDC Protocol, CRF Location.docx
AllProvidedFiles_149/prostate_cancer_challenge_data_finalscoringset/: LabValue_validation.csv  LesionMeasure_validation.csv  MedHistory_validation.csv  PriorMed_validation.csv  VitalSign_validation.csv
AllProvidedFiles_310/: DDT_408_v2.xlsx  ~$DDT_408_v2.xlsx
pds149/: calibration.py  cli.py  endpoints.py  features_baseline.py  features_longitudinal.py  io.py  model_ae.py  model_os.py  model_os_advanced.py  os_eval.py  os_simulate.py  os_simulate_cox.py  plotting.py  reporting.py  simulate.py
pds310/: DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  README.md.bak  REPORT.md  REPORT.md.bak  __init__.py  build_profiles.py  calibration.py  cli.py  config.yaml  cv.py  digital_profile.py  endpoints.py  feature_engineering.py  features_baseline.py  features_longitudinal.py  generate_twins.py  io.py  labs.py  model_ae.py  model_biomarkers.py  model_response.py  model_survival.py  model_ttr.py  mutation.py  os_eval.py  os_simulate_cox.py  plotting.py  predict_outcomes.py  preprocessing.py  profile_database.py  profile_viz.py  reporting.py  run_validation.py  run_virtual_trial.py  simulate.py  test_predictions.py  (+10 more)
(+52 files in other folders)
