[project]
name = "pds149"
version = "0.1.0"
description = "Prostate Cancer DREAM Challenge modeling and simulation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Longetivity Task" }]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "lifelines>=0.27",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.12",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "scikit-survival>=0.23.1",
  "xgboost>=2.1.4",
  "pyreadstat>=1.2",
]

[project.optional-dependencies]
advanced = [
  "scikit-survival>=0.22",
  "xgboost>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pds149*", "pds310*"]
exclude = ["outputs*", "AllProvidedFiles_149*", "AllProvidedFiles_310*"]

[tool.uv]
package = true
